--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
     "name": "monowave",
-    "displayName": "monowave",
+    "displayName": "Monowave Theme",
     "description": "A light theme perfect for summer at noon",
     "version": "0.0.1",
+    "publisher": "MarceloArias",
     "engines": {
         "vscode": "^1.64.0"
     },
     "categories": [
         "Themes"
+    ],
+    "keywords": [
+        "theme",
+        "light-theme",
+        "monokai",
+        "very-light-theme"
     ],
     "contributes": {
         "themes": [
@@ -17,5 +24,9 @@
                 "path": "./themes/Monowave-color-theme.json"
             }
         ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/360macky/monowave"
     }
 }
