--- a/themes/Monowave-color-theme.json
+++ b/themes/Monowave-color-theme.json
@@ -1718,22 +1718,30 @@
     {
       "name": "js/ts italic",
       "scope": "entity.other.attribute-name.js,entity.other.attribute-name.ts,entity.other.attribute-name.jsx,entity.other.attribute-name.tsx,variable.parameter,variable.language.super",
-      "settings": {}
+      "settings": {
+        "fontStyle": "italic"
+      }
     },
     {
       "name": "comment",
       "scope": "comment.line.double-slash,comment.block.documentation",
-      "settings": {}
+      "settings": {
+        "fontStyle": "italic"
+      }
     },
     {
       "name": "Python Keyword Control",
       "scope": "keyword.control.import.python,keyword.control.flow.python",
-      "settings": {}
+      "settings": {
+        "fontStyle": "italic"
+      }
     },
     {
       "name": "markup.italic.markdown",
       "scope": "markup.italic.markdown",
-      "settings": {}
+      "settings": {
+        "fontStyle": "italic"
+      }
     }
   ],
   "colors": {
@@ -1810,21 +1818,21 @@
     "editorLineNumber.foreground": "#237893",
     "editorCursor.foreground": "#000000",
     "editorCursor.background": "#ffffff",
-    "editor.selectionBackground": "#add6ff",
-    "editor.inactiveSelectionBackground": "#e5ebf1",
+    "editor.selectionBackground": "#f1f8ff",
+    "editor.inactiveSelectionBackground": "#f1f8ff",
     "editorWhitespace.foreground": "#33333333",
     "editor.selectionHighlightBackground": "#add6ff80",
-    "editor.selectionHighlightBorder": "#495F77",
-    "editor.findMatchBackground": "#a8ac94",
-    "editor.findMatchBorder": "#979b83",
-    "editor.findMatchHighlightBackground": "#ea5c0055",
+    "editor.selectionHighlightBorder": "#add6ff80",
+    "editor.findMatchBackground": "#f9ffd9bb",
+    "editor.findMatchBorder": "#f9ffd9bb",
+    "editor.findMatchHighlightBackground": "#fdcaa955",
     "editor.findMatchHighlightBorder": "#ffffff00",
     "editor.findRangeHighlightBackground": "#b4b4b44d",
     "editor.findRangeHighlightBorder": "#ffffff00",
     "editor.rangeHighlightBackground": "#fdff0033",
     "editor.rangeHighlightBorder": "#ffffff00",
     "editor.hoverHighlightBackground": "#add6ff26",
-    "editor.wordHighlightStrongBackground": "#0e639c40",
+    "editor.wordHighlightStrongBackground": "#b7d9f040",
     "editor.wordHighlightBackground": "#57575740",
     "editor.lineHighlightBackground": "#ffffff0A",
     "editor.lineHighlightBorder": "#eeeeee",
@@ -1853,8 +1861,8 @@
     "editorGutter.foldingControlForeground": "#424242",
     "editorCodeLens.foreground": "#999999",
     "editorGroup.border": "#e7e7e7",
-    "diffEditor.insertedTextBackground": "#9bb95533",
-    "diffEditor.removedTextBackground": "#ff000033",
+    "diffEditor.insertedTextBackground": "#dafff572",
+    "diffEditor.removedTextBackground": "#ffc7d576",
     "diffEditor.border": "#d7d7d7",
     "panel.background": "#ffffff",
     "panel.border": "#80808059",
@@ -1969,8 +1977,8 @@
     "minimapGutter.addedBackground": "#06d6a0",
     "minimapGutter.modifiedBackground": "#118ab2",
     "minimapGutter.deletedBackground": "#ef476f",
-    "minimap.findMatchHighlight": "#a8ac94",
-    "minimap.selectionHighlight": "#add6ff",
+    "minimap.findMatchHighlight": "#f9ffd9bb",
+    "minimap.selectionHighlight": "#f1f8ff",
     "minimap.errorHighlight": "#ef476f",
     "minimap.warningHighlight": "#ffd166",
     "minimap.background": "#ffffff",
